# eigent

./: .dockerignore  .env.development  .gitignore  .lintstagedrc.json  .markdownlintrc.js  .prettierrc  .traceroot-config.yaml  AGENTS.md  ANALYSIS_SUMMARY.md  BROWSER_LOG_EXTRACTION_README.md  CDP_POOL_ISSUE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONTRIBUTING.md  DEVELOPER_AGENT_USAGE_SUMMARY.md  DEVELOPMENT.md  EPIICS_AND_STORIES.md  ERROR_ANALYSIS_REPORT.md  EXTERNAL_CDP_PROMPT_CHANGES.md  EXTRACTION_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_EXTRACTION_README.md  FINAL_FIX_SUMMARY.md  FINAL_TERMINAL_LOG_ANALYSIS.md  FIX_COMPLETED.md  FIX_WORKFORCE_CLEANUP.md  FRONTEND_BACKEND_LOG_COMPARISON.md  HOW_TO_USE_SEND_MESSAGE_TO_USER.md  IDEAS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  LICENSE  LOG_VERIFICATION_REPORT.md  MANUAL_TEST_GUIDE.md  MCP_TOOLKIT_NAME_FIX.md  MESSAGE_INTEGRATION_ANALYSIS.md  MESSAGE_INTEGRATION_FINAL_REPORT.md  MESSAGE_INTEGRATION_LOGGING_ADDED.md  MESSAGE_TITLE_BUG_DEEP_ANALYSIS.md  OPUS_TOOLS_ANALYSIS.md  (+124 more)
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
backend/app/: __init__.py  rate_limit.py  router.py
backend/app/agent/: README.md  __init__.py  agent_model.py  listen_chat_agent.py  listen_chat_agent_callback.py  prompt.py  tools.py  utils.py
backend/benchmark/: README.md  client.py  environment.py  main.py
backend/config/: hands_clusters.example.toml
backend/tests/: conftest.py  test_runtime_ui_toolkit.py
backend/utils/: traceroot_wrapper.py
(+2451 files in other folders)
