[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pip>=23.0",
    "camel-ai[eigent]==0.2.85",
    "fastapi>=0.115.12",
    "fastapi-babel>=1.0.0",
    "uvicorn[standard]>=0.34.2",
    "pydantic-i18n>=0.4.5",
    "python-dotenv>=1.1.0",
    "httpx[socks]>=0.28.1",
    "pydash>=8.0.5",
    "inflection>=0.5.1",
    "aiofiles>=24.1.0",
    "openai>=1.99.3,<2",
    "nodejs-wheel>=22.18.0",
    "numpy>=1.23.0,<2.0.0",
    "debugpy>=1.8.17",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
]


[dependency-groups]
dev = [
    "babel>=2.17.0",
    "pre-commit>=4.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.isort]
profile = "black"
line_length = 79
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.yapf]
based_on_style = "pep8"
column_limit = 79
blank_line_before_nested_class_or_def = true
split_before_named_assigns = true
dedent_closing_brackets = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "B006", # forbid def demo(mutation = [])
]

[tool.flake8]
max-line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
